# c8hs

./: CHANGELOG.md  README.org  c8hs.cabal
app/: Main.hs
src/: MyLib.hs
